project font-size correction on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -489,7 +489,7 @@ body{
 }
 @media screen and (max-width:500px){
   .single-project-container h1{
-    font-size: 0.5rem;
+    font-size: 1rem;
   }
 
   .single-project-container{
